git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@6 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attacks.cs" />
     <Compile Include="Chess.cs" />
     <Compile Include="ChessBoard.cs" />
     <Compile Include="ChessBook.cs" />
