--- a/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
+++ b/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
@@ -45,6 +45,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttacksTest.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="EvalTest.cs" />
     <Compile Include="FENTest.cs" />
