--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -42,15 +42,22 @@
   <ItemGroup>
     <Compile Include="Attacks.cs" />
     <Compile Include="Chess.cs" />
+    <Compile Include="ChessBitboard.cs" />
     <Compile Include="ChessBoard.cs" />
     <Compile Include="ChessBook.cs" />
+    <Compile Include="ChessDirection.cs" />
     <Compile Include="ChessEval.cs" />
     <Compile Include="ChessFEN.cs" />
+    <Compile Include="ChessFile.cs" />
     <Compile Include="ChessGame.cs" />
     <Compile Include="ChessGamePlayer.cs" />
     <Compile Include="ChessMove.cs" />
     <Compile Include="ChessOpening.cs" />
     <Compile Include="ChessPGN.cs" />
+    <Compile Include="ChessPiece.cs" />
+    <Compile Include="ChessPlayer.cs" />
+    <Compile Include="ChessPosition.cs" />
+    <Compile Include="ChessRank.cs" />
     <Compile Include="ChessSearch.cs" />
     <Compile Include="ChessTrans.cs" />
     <Compile Include="ChessZobrist.cs" />
