--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ChessBook.cs" />
     <Compile Include="ChessDirection.cs" />
     <Compile Include="ChessEval.cs" />
+    <Compile Include="ChessEvalSettings.cs" />
     <Compile Include="ChessFEN.cs" />
     <Compile Include="ChessFile.cs" />
     <Compile Include="ChessGame.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="ChessOpening.cs" />
     <Compile Include="ChessPGN.cs" />
     <Compile Include="ChessPiece.cs" />
+    <Compile Include="ChessPieceType.cs" />
     <Compile Include="ChessPlayer.cs" />
     <Compile Include="ChessPosition.cs" />
     <Compile Include="ChessRank.cs" />
