git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@20 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ChessFile.cs" />
     <Compile Include="ChessGame.cs" />
     <Compile Include="ChessGamePlayer.cs" />
+    <Compile Include="ChessGameStage.cs" />
     <Compile Include="ChessMove.cs" />
     <Compile Include="ChessOpening.cs" />
     <Compile Include="ChessPGN.cs" />
