--- a/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
+++ b/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="AttacksTest.cs" />
     <Compile Include="ChessEvalSettingsTest.cs" />
     <Compile Include="Core.cs" />
+    <Compile Include="EvalSettingsTest.cs" />
     <Compile Include="EvalTest.cs" />
     <Compile Include="FENTest.cs" />
     <Compile Include="GameTest.cs" />
