git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@28 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.EvalTune/Sinobyl.EvalTune.csproj
+++ b/Sinobyl/Sinobyl.EvalTune/Sinobyl.EvalTune.csproj
@@ -63,7 +63,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ChampionSettings.xml" />
+    <Content Include="ChampionSettings.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
