git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@37 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.EvalTune/Sinobyl.EvalTune.csproj
+++ b/Sinobyl/Sinobyl.EvalTune/Sinobyl.EvalTune.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MutatorFactory.cs" />
     <Compile Include="Mutators\PcSqMutator.cs" />
     <Compile Include="Mutators\PieceValueMutator.cs" />
+    <Compile Include="Mutators\WeightMutator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
