git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@41 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -50,7 +50,10 @@
     <Compile Include="ChessEvalSettings.cs" />
     <Compile Include="ChessFEN.cs" />
     <Compile Include="ChessFile.cs" />
+    <Compile Include="ChessGame.cs" />
+    <Compile Include="ChessGamePlayer.cs" />
     <Compile Include="ChessGameStage.cs" />
+    <Compile Include="ChessMatch.cs" />
     <Compile Include="ChessMove.cs" />
     <Compile Include="ChessOpening.cs" />
     <Compile Include="ChessPGN.cs" />
