--- a/Sinobyl/Sinobyl.EvalTune/Sinobyl.EvalTune.csproj
+++ b/Sinobyl/Sinobyl.EvalTune/Sinobyl.EvalTune.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeterministicChallenge.cs" />
+    <Compile Include="DeterministicPlayer.cs" />
     <Compile Include="IEvalSettingsMutator.cs" />
     <Compile Include="MutatorFactory.cs" />
     <Compile Include="Mutators\PcSqMutator.cs" />
