refactored pawn eval to own class
git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@52 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
+++ b/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="AttacksTest.cs" />
     <Compile Include="ChessEvalSettingsTest.cs" />
     <Compile Include="ChessMoveTest.cs" />
+    <Compile Include="ChessPieceTypeTest.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="EvalSettingsTest.cs" />
     <Compile Include="EvalTest.cs" />
