git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@63 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.WPF/Sinobyl.WPF.csproj
+++ b/Sinobyl/Sinobyl.WPF/Sinobyl.WPF.csproj
@@ -57,7 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Converters\PositionToLeft.cs" />
+    <Compile Include="Converters\PositionToCoord.cs" />
     <Compile Include="SampleData\BoardDesignData\BoardDesignData.xaml.cs">
       <DependentUpon>BoardDesignData.xaml</DependentUpon>
     </Compile>
