--- a/Sinobyl/Sinobyl.WPF/Sinobyl.WPF.csproj
+++ b/Sinobyl/Sinobyl.WPF/Sinobyl.WPF.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ViewModels\BoardPieceVM.cs" />
     <Compile Include="ViewModels\BoardSquareVM.cs" />
     <Compile Include="ViewModels\BoardVM.cs" />
+    <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\Board.xaml.cs">
       <DependentUpon>Board.xaml</DependentUpon>
