git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@70 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.WPF/Sinobyl.WPF.csproj
+++ b/Sinobyl/Sinobyl.WPF/Sinobyl.WPF.csproj
@@ -58,7 +58,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Behaviors\PieceDragBehavior.cs" />
     <Compile Include="Converters\PositionToCoord.cs" />
+    <Compile Include="Models\BoardModel.cs" />
+    <Compile Include="Models\IBoardModel.cs" />
     <Compile Include="SampleData\BoardDesignData\BoardDesignData.xaml.cs">
       <DependentUpon>BoardDesignData.xaml</DependentUpon>
     </Compile>
