git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@82 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.WPF/Sinobyl.WPF.csproj
+++ b/Sinobyl/Sinobyl.WPF/Sinobyl.WPF.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Models\IBoardModel.cs" />
     <Compile Include="Models\IPieceModel.cs" />
     <Compile Include="Models\PieceModel.cs" />
+    <Compile Include="Models\RangeObservableCollection.cs" />
     <Compile Include="SampleData\BoardDesignData\BoardDesignData.xaml.cs">
       <DependentUpon>BoardDesignData.xaml</DependentUpon>
     </Compile>
