git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@88 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.WPF/Sinobyl.WPF.csproj
+++ b/Sinobyl/Sinobyl.WPF/Sinobyl.WPF.csproj
@@ -60,6 +60,12 @@
     </ApplicationDefinition>
     <Compile Include="Behaviors\PieceDragBehavior.cs" />
     <Compile Include="Converters\PositionToCoord.cs" />
+    <Compile Include="DragHelper\DragDropContext.cs" />
+    <Compile Include="DragHelper\DragDropProperties.cs" />
+    <Compile Include="DragHelper\DragHandler.cs" />
+    <Compile Include="DragHelper\DropHandler.cs" />
+    <Compile Include="DragHelper\IDragSource.cs" />
+    <Compile Include="DragHelper\IDropTarget.cs" />
     <Compile Include="Models\BoardModel.cs" />
     <Compile Include="Models\IBoardModel.cs" />
     <Compile Include="Models\IPieceModel.cs" />
