git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@124 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ChessPosition.cs" />
     <Compile Include="ChessRank.cs" />
     <Compile Include="ChessSearch.cs" />
+    <Compile Include="ChessSearchAsync.cs" />
     <Compile Include="ChessTimeControl.cs" />
     <Compile Include="ChessTrans.cs" />
     <Compile Include="ChessZobrist.cs" />
