--- a/Sinobyl/Sinobyl.CommandLine/Sinobyl.CommandLine.csproj
+++ b/Sinobyl/Sinobyl.CommandLine/Sinobyl.CommandLine.csproj
@@ -67,6 +67,9 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.3\lib\net40-client\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -86,6 +89,10 @@
       <Project>{E86F13A0-CC65-4E3C-AA5F-030CE93D36B7}</Project>
       <Name>Sinobyl.Engine</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
