--- a/Sinobyl/Sinobyl.CommandLine/App.config
+++ b/Sinobyl/Sinobyl.CommandLine/App.config
@@ -14,6 +14,7 @@
     <root>
       <level value="WARN" />
       <appender-ref ref="TraceAppender" />
+      <appender-ref ref="logFileAppender" />
     </root>
     
     <logger name="Sinobyl.CommandLine">
@@ -23,11 +24,19 @@
     
 
     
-
+    <appender name="logFileAppender" type="log4net.Appender.FileAppender">
+      <file type="log4net.Util.PatternString">
+        <conversionPattern value="Sinobyl%date{ yyyyMMddHHmmss }-[%processid].log" />
+      </file>
+      <appendToFile value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%timestamp %logger - %message%newline"/>
+      </layout>
+    </appender>
 
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%timestamp %-5level - %message%newline"/>
+        <conversionPattern value="%timestamp %logger - %message%newline"/>
       </layout>
     </appender>
 
