git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@130 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.CommandLine/App.config
+++ b/Sinobyl/Sinobyl.CommandLine/App.config
@@ -12,7 +12,7 @@
   <log4net>
     
     <root>
-      <level value="WARN" />
+      <level value="DEBUG" />
       <appender-ref ref="TraceAppender" />
       <appender-ref ref="logFileAppender" />
     </root>
