--- a/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
+++ b/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="FENTest.cs" />
     <Compile Include="GameTest.cs" />
     <Compile Include="MovegenTest.cs" />
+    <Compile Include="PGNTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -87,6 +88,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="pgnFiles\short.pgn" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
