git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@153 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ChessBook.cs" />
     <Compile Include="ChessDirection.cs" />
     <Compile Include="ChessEval.cs" />
+    <Compile Include="ChessEvalPassed.cs" />
     <Compile Include="ChessEvalPawns.cs" />
     <Compile Include="ChessEvalSettings.cs" />
     <Compile Include="ChessFEN.cs" />
