git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@154 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.CommandLine/App.config
+++ b/Sinobyl/Sinobyl.CommandLine/App.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
 
   <appSettings>
@@ -12,13 +12,13 @@
   <log4net>
     
     <root>
-      <level value="DEBUG" />
-      <appender-ref ref="TraceAppender" />
-      <appender-ref ref="logFileAppender" />
+      <level value="DEBUG"/>
+      <appender-ref ref="TraceAppender"/>
+      <appender-ref ref="logFileAppender"/>
     </root>
     
     <logger name="Sinobyl.CommandLine">
-      <level value="DEBUG" />
+      <level value="DEBUG"/>
     </logger>
 
     
@@ -26,9 +26,9 @@
     
     <appender name="logFileAppender" type="log4net.Appender.FileAppender">
       <file type="log4net.Util.PatternString">
-        <conversionPattern value="Sinobyl%date{ yyyyMMddHHmmss }-[%processid].log" />
+        <conversionPattern value="Sinobyl%date{ yyyyMMddHHmmss }-[%processid].log"/>
       </file>
-      <appendToFile value="true" />
+      <appendToFile value="true"/>
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%timestamp %logger - %message%newline"/>
       </layout>
@@ -42,4 +42,4 @@
 
 
   </log4net>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup></configuration>
