--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ChessGamePlayer.cs" />
     <Compile Include="ChessGameStage.cs" />
     <Compile Include="ChessMatch.cs" />
+    <Compile Include="ChessMove.Comparer.cs" />
     <Compile Include="ChessMove.cs" />
     <Compile Include="ChessOpening.cs" />
     <Compile Include="ChessPGN.cs" />
