git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@190 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
+++ b/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
@@ -70,6 +70,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="TransTableTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sinobyl.Engine\Sinobyl.Engine.csproj">
