--- a/Sinobyl/Sinobyl.WPF/packages.config
+++ b/Sinobyl/Sinobyl.WPF/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net451" />
   <package id="log4net" version="2.0.3" targetFramework="net451" />
+  <package id="MvvmLight" version="4.2.30.0" targetFramework="net451" />
+  <package id="MvvmLightLibs" version="4.2.30.0" targetFramework="net451" />
 </packages>
