git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@197 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Windows/Sinobyl.Windows.csproj
+++ b/Sinobyl/Sinobyl.Windows/Sinobyl.Windows.csproj
@@ -65,6 +65,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\RootVM.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -74,7 +75,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Common\Messenger.cs" />
-    <Compile Include="Common\ViewModelBase.cs" />
+    <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
