--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ChessTrans.cs" />
     <Compile Include="ChessZobrist.cs" />
     <Compile Include="EventArgs.cs" />
+    <Compile Include="MagicBitboards.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
