git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@275 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -64,6 +64,8 @@
     <Compile Include="ChessGameStage.cs" />
     <Compile Include="ChessMatch.cs" />
     <Compile Include="ChessMove.cs" />
+    <Compile Include="ChessMoveBuffer.cs" />
+    <Compile Include="ChessMoveSEE.cs" />
     <Compile Include="ChessOpening.cs" />
     <Compile Include="ChessPGN.cs" />
     <Compile Include="ChessPiece.cs" />
