--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -81,6 +81,7 @@
     <Compile Include="EventArgs.cs" />
     <Compile Include="MagicBitboards.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
