git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@286 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.CommandLine/App.config
+++ b/Sinobyl/Sinobyl.CommandLine/App.config
@@ -12,7 +12,7 @@
   <log4net>
     
     <root>
-      <level value="DEBUG"/>
+      <level value="WARN"/>
       <appender-ref ref="TraceAppender"/>
       <appender-ref ref="logFileAppender"/>
     </root>
@@ -21,6 +21,10 @@
       <level value="DEBUG"/>
     </logger>
 
+    <logger name="Sinobyl.Engine.TimeManagerBase">
+      <level value="INFO"/>
+    </logger>
+    
     
 
     
