git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@289 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.CommandLine/App.config
+++ b/Sinobyl/Sinobyl.CommandLine/App.config
@@ -18,7 +18,7 @@
     </root>
     
     <logger name="Sinobyl.CommandLine">
-      <level value="DEBUG"/>
+      <level value="WARN"/>
     </logger>
 
     <logger name="Sinobyl.Engine.TimeManagerBase">
