git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@301 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.CommandLine/App.config
+++ b/Sinobyl/Sinobyl.CommandLine/App.config
@@ -18,11 +18,11 @@
     </root>
     
     <logger name="Sinobyl.CommandLine">
-      <level value="WARN"/>
+      <level value="INFO"/>
     </logger>
 
     <logger name="Sinobyl.Engine.TimeManagerBase">
-      <level value="INFO"/>
+      <level value="ERROR"/>
     </logger>
     
     
