git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@310 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -80,6 +80,7 @@
     <Compile Include="ChessZobrist.cs" />
     <Compile Include="EventArgs.cs" />
     <Compile Include="MagicBitboards.cs" />
+    <Compile Include="PhasedScore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeManager.cs" />
   </ItemGroup>
