--- a/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
+++ b/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="GameTest.cs" />
     <Compile Include="MovegenTest.cs" />
     <Compile Include="PGNTests.cs" />
+    <Compile Include="PhasedScoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
