--- a/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
+++ b/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ChessMoveTest.cs" />
     <Compile Include="ChessPieceTypeTest.cs" />
     <Compile Include="Core.cs" />
+    <Compile Include="EvalMaterialTests.cs" />
     <Compile Include="EvalSettingsTest.cs" />
     <Compile Include="EvalTest.cs" />
     <Compile Include="FENTest.cs" />
