git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@328 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
+++ b/Sinobyl/Sinobyl.Engine.Tests/Sinobyl.Engine.Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ChessPieceTypeTest.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="EvalMaterialTests.cs" />
+    <Compile Include="EvalPawnTest.cs" />
     <Compile Include="EvalSettingsTest.cs" />
     <Compile Include="EvalTest.cs" />
     <Compile Include="FENTest.cs" />
