--- a/Sinobyl/Sinobyl.CommandLine/App.config
+++ b/Sinobyl/Sinobyl.CommandLine/App.config
@@ -34,7 +34,7 @@
       </file>
       <appendToFile value="true"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%timestamp %logger - %message%newline"/>
+        <conversionPattern value="%logger - %message%newline"/>
       </layout>
     </appender>
 
