git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@350 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ChessMove.cs" />
     <Compile Include="ChessMove.Generate.cs" />
     <Compile Include="ChessMoveBuffer.cs" />
+    <Compile Include="ChessMoveBuffer2.cs" />
     <Compile Include="ChessMoveSEE.cs" />
     <Compile Include="ChessOpening.cs" />
     <Compile Include="ChessPGN.cs" />
