git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@371 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -71,7 +71,7 @@
     <Compile Include="ChessMoveSEE.cs" />
     <Compile Include="ChessOpening.cs" />
     <Compile Include="ChessPGN.cs" />
-    <Compile Include="ChessPiece.cs" />
+    <Compile Include="Piece.cs" />
     <Compile Include="ChessPieceType.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="ChessPosition.cs" />
