git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@372 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -78,7 +78,7 @@
     <Compile Include="Rank.cs" />
     <Compile Include="ChessSearch.cs" />
     <Compile Include="ChessSearchAsync.cs" />
-    <Compile Include="ChessTimeControl.cs" />
+    <Compile Include="TimeControl.cs" />
     <Compile Include="TranspositionTable.cs" />
     <Compile Include="Zobrist.cs" />
     <Compile Include="EventArgs.cs" />
