git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@373 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -72,9 +72,9 @@
     <Compile Include="ChessOpening.cs" />
     <Compile Include="ChessPGN.cs" />
     <Compile Include="Piece.cs" />
-    <Compile Include="ChessPieceType.cs" />
+    <Compile Include="PieceType.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="ChessPosition.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Rank.cs" />
     <Compile Include="ChessSearch.cs" />
     <Compile Include="ChessSearchAsync.cs" />
