git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@374 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -50,7 +50,7 @@
   <ItemGroup>
     <Compile Include="Attacks.cs" />
     <Compile Include="Bitboard.cs" />
-    <Compile Include="ChessBoard.cs" />
+    <Compile Include="Board.cs" />
     <Compile Include="ChessBook.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="ChessEval.cs" />
