--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -58,7 +58,7 @@
     <Compile Include="ChessEvalMaterial.cs" />
     <Compile Include="ChessEvalPawns.cs" />
     <Compile Include="ChessEvalSettings.cs" />
-    <Compile Include="ChessFEN.cs" />
+    <Compile Include="FEN.cs" />
     <Compile Include="File.cs" />
     <Compile Include="ChessGame.cs" />
     <Compile Include="ChessGamePlayer.cs" />
