git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@378 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -67,8 +67,8 @@
     <Compile Include="ChessMove.cs" />
     <Compile Include="ChessMove.Generate.cs" />
     <Compile Include="MovePicker.cs" />
-    <Compile Include="ChessMoveSEE.cs" />
-    <Compile Include="ChessOpening.cs" />
+    <Compile Include="StaticExchange.cs" />
+    <Compile Include="Opening.cs" />
     <Compile Include="PGN.cs" />
     <Compile Include="Piece.cs" />
     <Compile Include="PieceType.cs" />
