--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -62,10 +62,9 @@
     <Compile Include="File.cs" />
     <Compile Include="ChessGame.cs" />
     <Compile Include="ChessGamePlayer.cs" />
-    <Compile Include="ChessGameStage.cs" />
-    <Compile Include="ChessMatch.cs" />
-    <Compile Include="ChessMove.cs" />
-    <Compile Include="ChessMove.Generate.cs" />
+    <Compile Include="GameStage.cs" />
+    <Compile Include="Move.cs" />
+    <Compile Include="Move.Generate.cs" />
     <Compile Include="MovePicker.cs" />
     <Compile Include="StaticExchange.cs" />
     <Compile Include="Opening.cs" />
