git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@384 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
+++ b/Sinobyl/Sinobyl.Engine/Sinobyl.Engine.csproj
@@ -74,8 +74,8 @@
     <Compile Include="Player.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Rank.cs" />
-    <Compile Include="ChessSearch.cs" />
-    <Compile Include="ChessSearchAsync.cs" />
+    <Compile Include="Search.cs" />
+    <Compile Include="SearchAsync.cs" />
     <Compile Include="TimeControl.cs" />
     <Compile Include="TranspositionTable.cs" />
     <Compile Include="Zobrist.cs" />
