--- a/Sinobyl/Sinobyl.NET/Sinobyl.NET.csproj
+++ b/Sinobyl/Sinobyl.NET/Sinobyl.NET.csproj
@@ -8,12 +8,16 @@
     <ProjectGuid>{6E8A7D8B-0CC2-4F91-8E0A-CB08D742387C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sinobyl.CommandLine</RootNamespace>
-    <AssemblyName>Sinobyl.CommandLine</AssemblyName>
+    <RootNamespace>Sinobyl.NET</RootNamespace>
+    <AssemblyName>Sinobyl.NET</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
+    <SccProjectName>Svn</SccProjectName>
+    <SccLocalPath>Svn</SccLocalPath>
+    <SccAuxPath>Svn</SccAuxPath>
+    <SccProvider>SubversionScc</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
