git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@389 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.NET/App.config
+++ b/Sinobyl/Sinobyl.NET/App.config
@@ -17,7 +17,7 @@
       <appender-ref ref="logFileAppender"/>
     </root>
     
-    <logger name="Sinobyl.CommandLine">
+    <logger name="Sinobyl.NET">
       <level value="INFO"/>
     </logger>
 
