--- a/Sinobyl/Sinobyl.NET/App.config
+++ b/Sinobyl/Sinobyl.NET/App.config
@@ -5,7 +5,6 @@
   </configSections>
   <appSettings>
     <add key="log4net.Internal.Debug" value="false" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <log4net>
     <root>
@@ -13,7 +12,7 @@
       <appender-ref ref="TraceAppender" />
       <appender-ref ref="logFileAppender" />
     </root>
-    <logger name="Sinobyl.CommandLine">
+    <logger name="Sinobyl.NET">
       <level value="INFO" />
     </logger>
     <logger name="Sinobyl.Engine.TimeManagerBase">
@@ -37,16 +36,4 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
 </configuration>
