updated version information.

--- a/NoraGrace/NoraGrace/App.config
+++ b/NoraGrace/NoraGrace/App.config
@@ -10,17 +10,17 @@
     <root>
       <level value="WARN" />
       <appender-ref ref="TraceAppender" />
-      <appender-ref ref="logFileAppender" />
+      <!--<appender-ref ref="logFileAppender" />-->
     </root>
-    <logger name="Sinobyl.NET">
-      <level value="INFO" />
+    <logger name="NoraGrace.CommandLine">
+      <level value="WARN" />
     </logger>
     <logger name="Sinobyl.Engine.TimeManagerBase">
       <level value="ERROR" />
     </logger>
     <appender name="logFileAppender" type="log4net.Appender.FileAppender">
       <file type="log4net.Util.PatternString">
-        <conversionPattern value="Sinobyl%date{ yyyyMMddHHmmss }-[%processid].log" />
+        <conversionPattern value="NoraGrace%date{ yyyyMMddHHmmss }-[%processid].log" />
       </file>
       <appendToFile value="true" />
       <layout type="log4net.Layout.PatternLayout">
