added new testpostions file.

--- a/NoraGrace/NoraGrace/App.config
+++ b/NoraGrace/NoraGrace/App.config
@@ -10,10 +10,10 @@
     <root>
       <level value="WARN" />
       <appender-ref ref="TraceAppender" />
-      <!--<appender-ref ref="logFileAppender" />-->
+      <appender-ref ref="logFileAppender" />
     </root>
     <logger name="NoraGrace.CommandLine">
-      <level value="WARN" />
+      <level value="INFO" />
     </logger>
     <logger name="Sinobyl.Engine.TimeManagerBase">
       <level value="ERROR" />
